// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fuzzyFilter(items, filterText) should return the expected array if filterText equals "" 1`] = `
Array [
  Object {
    "label": "New York",
  },
  Object {
    "label": "New Mexico",
  },
  Object {
    "label": "Alaska",
  },
]
`;

exports[`fuzzyFilter(items, filterText) should return the expected array if filterText equals ""(me?x|al.ska+)"" 1`] = `
Array [
  Object {
    "label": "New Mexico",
  },
  Object {
    "label": "Alaska",
  },
]
`;

exports[`fuzzyFilter(items, filterText) should return the expected array if filterText equals ""new york"" 1`] = `
Array [
  Object {
    "label": "New York",
  },
]
`;

exports[`fuzzyFilter(items, filterText) should return the expected array if filterText equals "NEW" 1`] = `
Array [
  Object {
    "label": "New York",
  },
  Object {
    "label": "New Mexico",
  },
]
`;

exports[`fuzzyFilter(items, filterText) should return the expected array if filterText equals "alas" 1`] = `
Array [
  Object {
    "label": "Alaska",
  },
]
`;

exports[`fuzzyFilter(items, filterText) should return the expected array if filterText equals "new jersey" 1`] = `Array []`;
